e-commerce: Code refactor.

--- a/apps/showcase-app/src/styles.scss
+++ b/apps/showcase-app/src/styles.scss
@@ -104,3 +104,13 @@ html,
 .e-commerce-snackbar {
   @apply bg-e-com-secondary-variant;
 }
+
+.mat-drawer {
+  ::-webkit-scrollbar-thumb {
+    @apply bg-e-com-front-secondary-variant;
+    -webkit-border-radius: 2rem;
+  }
+  ::-webkit-scrollbar-corner {
+    border-radius: 50%;
+  }
+}
