--- a/libs/e-commerce-lib/src/lib/client/ui/ui-products-layout/ui-products-layout.component.html
+++ b/libs/e-commerce-lib/src/lib/client/ui/ui-products-layout/ui-products-layout.component.html
@@ -87,7 +87,9 @@
           </ng-container>
         </button>
         <ng-container *ngIf="!isViewOnMobile || !drawer.opened">
-          {{ content }}
+          <span class="font-semibold">
+            {{ content }}
+          </span>
         </ng-container>
       </div>
 
