--- a/libs/e-commerce-lib/src/lib/shared/ui/shared-product-card/shared-product-card.component.html
+++ b/libs/e-commerce-lib/src/lib/shared/ui/shared-product-card/shared-product-card.component.html
@@ -7,7 +7,7 @@
   <div class="rounded-sm overflow-hidden">
     <img class="h-[200px] w-full" [src]="inputImage" />
   </div>
-  <div class="text-lg">{{ inputProductName }}</div>
+  <div class="text-lg font-semibold">{{ inputProductName }}</div>
   <div>{{ inputProductBrand }}</div>
   <div class="flex items-center justify-between">
     <div class="font-semibold text-lg">
