--- a/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
@@ -7,31 +7,46 @@
             <img [src]="product.image" />
           </div>
         </div>
-        <div class="w-full h-full lg:w-1/2 p-2 lg:p-14">
+        <div class="w-full h-full lg:w-1/2 p-4 lg:p-14">
           <cdk-virtual-scroll-viewport
             appendOnly
             itemSize="50"
             class="w-full h-full"
           >
-            <div class="h-full flex flex-col gap-8">
+            <div class="h-full flex flex-col pr-1 gap-8">
+              <div class="text-xl font-semibold">{{ product.name }}</div>
               <div class="flex items-center justify-between text-lg">
-                {{ product.brand }}
+                <span class="flex flex-col gap-2">
+                  <label
+                    class="text-gray-500 text-sm underline underline-offset-2"
+                    >Brand</label
+                  >
+                  {{ product.brand }}
+                </span>
+                <span class="flex flex-col gap-2">
+                  <label
+                    class="text-gray-500 text-sm underline underline-offset-2"
+                    >Category</label
+                  >
+                  {{ product.category }}
+                </span>
               </div>
-              <div class="text-lg font-semibold">{{ product.name }}</div>
               <div class="flex flex-col gap-2">
-                <span class="text-sm underline underline-offset-2"
-                  >Description</span
+                <label
+                  class="text-gray-500 text-sm underline underline-offset-2"
+                  >Description</label
                 >
                 {{ product.description }}
               </div>
-              <div class="text-sm flex flex-col gap-2">
-                <span class="underline underline-offset-2"
-                  >Shipping information</span
+              <div class="flex flex-col gap-2">
+                <label
+                  class="text-gray-500 text-sm underline underline-offset-2"
+                  >Shipping information</label
                 >
                 {{ product.shipping_information }}
               </div>
               <div
-                class="text-lg font-semibold flex justify-between items-center p-2"
+                class="text-xl font-semibold flex justify-between items-center p-2"
               >
                 <span>{{ product.price }} PLN </span>
                 <button
