--- a/libs/e-commerce-lib/src/lib/client/ui/ui-products-layout/ui-products-layout.component.scss
+++ b/libs/e-commerce-lib/src/lib/client/ui/ui-products-layout/ui-products-layout.component.scss
@@ -9,3 +9,11 @@
 .mat-drawer-side {
   @apply lg:border-e-com-front-secondary lg:mt-10 bg-e-com-front-primary text-dark;
 }
+
+::-webkit-scrollbar-thumb {
+  @apply bg-e-com-front-secondary-variant;
+  -webkit-border-radius: 2rem;
+}
+::-webkit-scrollbar-corner {
+  border-radius: 50%;
+}
