e-commerce: Implement update and code refactor.

--- a/libs/e-commerce-lib/src/lib/shared/ui/shared-product-card/shared-product-card.component.html
+++ b/libs/e-commerce-lib/src/lib/shared/ui/shared-product-card/shared-product-card.component.html
@@ -5,7 +5,7 @@
   }"
 >
   <div class="rounded-sm overflow-hidden">
-    <img class="h-[200px] w-full" [src]="inputImage" />
+    <img class="h-[200px] w-full object-cover" [src]="inputImage" />
   </div>
   <div class="text-lg font-semibold">{{ inputProductName }}</div>
   <div>{{ inputProductBrand }}</div>
