--- a/libs/e-commerce-lib/src/lib/admin/ui/ui-add-product/ui-add-product.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/ui/ui-add-product/ui-add-product.component.html
@@ -110,7 +110,7 @@
         type="text"
         name="image"
         id="image"
-        placeholder="Link to image"
+        placeholder="Link to image: unsplash.com"
         formControlName="image"
       />
     </div>
