--- a/libs/e-commerce-lib/src/lib/admin/ui/ui-layout/ui-layout.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/ui/ui-layout/ui-layout.component.html
@@ -37,7 +37,7 @@
   <footer class="flex items-center justify-center">
     <a
       class="underline hover:text-e-com-accent transition-colors duration-500"
-      routerLink="../../products"
+      routerLink="/e-commerce-app/products"
       >View online shop</a
     >
   </footer>
