--- a/libs/music-player-lib/src/lib/components/landing/landing.component.html
+++ b/libs/music-player-lib/src/lib/components/landing/landing.component.html
@@ -26,7 +26,7 @@
         >Howler.js</a
       ></span
     >
-    and
+    |
     <span
       ><a
         target="_blank"
@@ -34,6 +34,16 @@
         href="https://www.jamendo.com/"
         class="text-light dark:text-dark underline underline-offset-2"
         >Jamendo music</a
+      ></span
+    >
+    |
+    <span
+      ><a
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://thomasburlesonia.medium.com/push-based-architectures-with-rxjs-81b327d7c32d"
+        class="text-light dark:text-dark underline underline-offset-2"
+        >Push-based architectures - RxJs</a
       ></span
     >
   </footer>
