--- a/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
@@ -23,7 +23,7 @@
                   >
                   {{ product.brand }}
                 </span>
-                <span class="flex flex-col gap-2">
+                <span class="flex flex-col items-end gap-2">
                   <label
                     class="text-gray-500 text-sm underline underline-offset-2"
                     >Category</label
