--- a/libs/e-commerce-lib/src/lib/client/ui/ui-cart/ui-cart.component.html
+++ b/libs/e-commerce-lib/src/lib/client/ui/ui-cart/ui-cart.component.html
@@ -1,6 +1,7 @@
 <h1 mat-dialog-title>Cart</h1>
 <div mat-dialog-content class="w-[300px] h-[400px] lg:w-[600px]">
-  <div class="flex flex-col gap-4">
+  <div class="h-full grid place-items-center">In progress...</div>
+  <!-- <div class="flex flex-col gap-4">
     <div
       class="w-full flex items-center justify-between border-b-[1px] border-dark py-4"
     >
@@ -15,17 +16,19 @@
       <div>Product name</div>
       <div class="text-lg">300</div>
     </div>
-  </div>
+  </div> -->
 </div>
-<div
+<!-- <div
   class="border-t-[1px] border-dark flex items-center justify-end gap-4 py-4"
 >
   Total
   <div class="font-semibold text-lg">
     300 <span class="text-sm font-normal">PLN</span>
   </div>
-</div>
-<div mat-dialog-actions class="flex justify-between">
-  <button mat-button mat-dialog-close>Close</button>
-  <button mat-stroked-button>Checkout</button>
+</div> -->
+<div mat-dialog-actions class="flex justify-end">
+  <button mat-button mat-dialog-close class="bg-e-com-front-accent">
+    Close
+  </button>
+  <!-- <button mat-stroked-button>Checkout</button> -->
 </div>
