minor code refactor

--- a/apps/showcase-app/src/app/components/sidenav/sidenav.component.html
+++ b/apps/showcase-app/src/app/components/sidenav/sidenav.component.html
@@ -35,7 +35,12 @@
     <mat-divider class="sidenav__line-divider"></mat-divider>
     <span class="sidenav__label">Contacts</span>
     <mat-list-option class="sidenav__link">
-      <a href="#" target="_blank" rel="noopener noreferrer">Discover</a>
+      <a
+        href="https://evan-pierrelouis.web.app"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Discover</a
+      >
     </mat-list-option>
   </div>
 </mat-selection-list>
